cluster/manifests/hello-world1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world1
  name: hello-world1
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: hello-world1
  type: ClusterIP
